--- a/SW.Library.Result/SW.Library.Result.csproj
+++ b/SW.Library.Result/SW.Library.Result.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Ardalis.GuardClauses" Version="5.0.0" />
 		<PackageReference Include="Ardalis.Result" Version="10.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
 	</ItemGroup>
